# market-midas-app

./: .gitignore  ADR.md  AGENTS.md  CLAUDE.md  MMAppDesign.md  MMDesign.md  README.md  market_midas_report.md  package-lock.json  package.json  prd.md  requirements.txt  run_backtest.py  run_pipeline.py  test_trader_browser.py
frontend/: SITE.md  next-prompt.md  next.config.ts  package-lock.json  package.json  stitch.json  test_search.js
frontend/design-system/pages/: debate-mode.md
frontend/queue/: debate.html  index.html
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  menu.rs
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/context/: AppContext.tsx
frontend/src/hooks/: useAlerts.ts  useAnalyze.ts  useConfidenceMeter.ts  useDashboard.ts  useDebate.ts  useExecutionInterlock.ts  useExplainabilityChip.ts  useNavBar.ts  useOnboarding.ts  useSettings.ts  useSignIn.ts  useTradeCard.ts  useTradeTracker.ts
src/: __init__.py  alert_engine.py  backtest.py  execute_trade.py  main.py  server.py
src/agents/: __init__.py  analyst.py  researcher.py  trader.py
src/data/: __init__.py  ingestion.py
src/portfolio/: store.py
src/risk/: manager.py
src/services/: analyze.py  trade.py
src/strategy/: __init__.py  debate.py  engine.py
src/utils/: market.py
tests/: __init__.py  test_alert_engine.py  test_analyst.py  test_main.py  test_portfolio_store.py  test_researcher.py  test_risk_manager.py  test_server.py  test_trader.py
(+34 files in other folders)
